完成笔记删除，笔记查看、编辑功能

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link rel="stylesheet" href="../static/src/assets/css/demo.css">
-    <!--    <script src="../static/src/m_js/note.js"></script>-->
+    <!--    <script src="../static/src/m_js/write.js"></script>-->
 </head>
 
 <!--<body onload="initPage()">-->
@@ -48,7 +48,7 @@
         <!-- Logo Header -->
         <div class="logo-header">
 
-            <a href="note.html" class="logo">
+            <a href="write.html" class="logo">
                 <img src="../static/src/assets/img/logoNotePlus.png" alt="navbar brand" class="navbar-brand" width="150px">
             </a>
             <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
@@ -340,7 +340,7 @@
                             </li>
                             <li>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/notelist.html">管理笔记</a>
+                                <a class="dropdown-item" href="/list.html">管理笔记</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/timeline.html">笔记归档</a>
                                 <div class="dropdown-divider"></div>
@@ -385,7 +385,7 @@
                                           </span>
                         </a> -->
 
-                        <a href="#">
+                        <a href="/write.html">
                             <button class="btn btn-primary btn-round btn-border" style="width:70%;margin-top: 5px;">
                                 新建笔记
                             </button>
@@ -398,7 +398,7 @@
                 </div>
                 <ul class="nav">
                     <li class="nav-item active">
-                        <a href="note.html">
+                        <a href="write.html">
                             <i class="fas fa-home"></i>
                             <p>使用教程</p>
                             <span class="badge badge-count">5</span>
