--- a/templates/list.html
+++ b/templates/list.html
@@ -47,6 +47,7 @@
 <script type="text/javascript" src="../static/src/assets/DataTables/Responsive-2.2.7/js/dataTables.responsive.min.js"></script>
     <!--    datatables-->
     <script src="../static/src/m_js/list.js"></script>
+
 </head>
 
 <body>
@@ -58,7 +59,7 @@
         <!-- Logo Header -->
         <div class="logo-header">
 
-            <a href="note.html" class="logo">
+            <a href="write.html" class="logo">
                 <img src="../static/src/assets/img/logoNotePlus.png" alt="navbar brand" class="navbar-brand" width="150px">
             </a>
             <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
@@ -350,7 +351,7 @@
                             </li>
                             <li>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/notelist.html">管理笔记</a>
+                                <a class="dropdown-item" href="/list.html">管理笔记</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/timeline.html">笔记归档</a>
                                 <div class="dropdown-divider"></div>
@@ -395,7 +396,7 @@
                                           </span>
                         </a> -->
 
-                        <a href="#">
+                        <a href="/write.html">
                             <button class="btn btn-primary btn-round btn-border" style="width:70%;margin-top: 5px;">
                                 新建笔记
                             </button>
@@ -408,7 +409,7 @@
                 </div>
                 <ul class="nav">
                     <li class="nav-item active">
-                        <a href="note.html">
+                        <a href="write.html">
                             <i class="fas fa-home"></i>
                             <p>使用教程</p>
                             <span class="badge badge-count">5</span>
@@ -677,10 +678,10 @@
                                     <tr>
 
                                         <th class="all">标题</th>
-                                        <th class="all">正文</th>
-                                        <th>关键词</th>
-                                        <th>摘要</th>
-                                         <th>创建日期</th>
+                                        <th class="none">正文</th>
+                                        <th class="none">关键词</th>
+                                        <th class="none">摘要</th>
+                                         <th class="none">创建日期</th>
                                         <th class="none">操作</th>
                                     </tr>
                                 </thead>
