添加收藏、取消收藏

--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,8 @@
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="../static/src/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../static/src/assets/css/azzara.min.css">
+	<link rel="stylesheet" href="../static/src/assets/css/fonts.css">
+
 <!--	自定义的js-->
 	<script src="../static/src/m_js/login.js"></script>
 </head>
@@ -58,7 +60,7 @@
 						<label class="custom-control-label" for="rememberme">记住账号</label>
 					</div>
 
-					<a href="#" class="link float-right">忘记密码?</a>
+					<a href="forget.html" class="link float-right">忘记密码?</a>
 				</div>
 				<div class="form-action mb-3">
 					<a href="#" id="login-btn" class="btn btn-primary btn-rounded btn-login" onclick="login()">登录</a>
