优化笔记显示

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>notePlus</title>
+    <title>个人信息</title>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
     <link rel="icon" href="../static/src/assets/img/icon.ico" type="image/x-icon"/>
 
@@ -659,15 +659,15 @@
 								<div class="card-footer">
 									<div class="row user-stats text-center">
 										<div class="col">
-											<div class="number">125</div>
+											<div class="number totalnum">0</div>
 											<div class="title">笔记</div>
 										</div>
 										<div class="col">
-											<div class="number">25K</div>
+											<div class="number collectnum">0</div>
 											<div class="title">收藏</div>
 										</div>
 										<div class="col">
-											<div class="number">134</div>
+											<div class="number deletenum">0</div>
 											<div class="title">回收站</div>
 										</div>
 									</div>
