--- a/templates/recycle.html
+++ b/templates/recycle.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>notePlus</title>
+  <title>回收站</title>
   <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
   <link rel="icon" href="../static/src/assets/img/icon.ico" type="image/x-icon" />
 
